# robot_map_editor

./: CMakeLists.txt  package.xml  plugin_description.xml
desktop/: robot_map_editor.desktop
include/robot_map_editor/controllers/: ogre_controller.hh
include/robot_map_editor/model/: mesh_view_model.hh  point_cloud_view_model.hh
include/robot_map_editor/ogre_helpers/: map_point_cloud.hh  object_list.hh  ogre_visuals.hh
include/robot_map_editor/ui/: edit_pc_tab.hh  io_tab.hh  robot_map_editor_panel.hh
include/robot_map_editor/utils/: history.hh  ogre_visualisation.hh  pcl_to_eigen.hh
launch/: robot_map_editor.launch  robot_map_editor.rviz
ogre_media/fonts/: buttonInfoPanel.fontdef  infoPanel.fontdef  liberation_sans.fontdef  viveTip.fontdef
ogre_media/materials/scripts/: bathroom.material  blue_material.material  button_texture.material  end_texture.material  green_material.material  intro_cube_texture.material  intro_texture.material  panel_texture.material  pipboy.material  pipboy_material.material  red_material.material  selected_end_effector.material  somatic_point_cloud.material  sphere_material.material  start_texture.material  tips.material  translate_plane_material.material
ogre_media/materials/scripts/vr_tree_widget/: close_case.material  close_texture.material  open_case.material  selected-node.material  texture_loader.material
ogre_media/models/: AnimCube.mesh  Chem.mesh  Cube.mesh  None.mesh  Pipboy.mesh  Plane.mesh  Vacuumer.mesh  Washer.mesh  Women_Bathroom_Pitsburg.mesh  floor2-women-bathroom.mesh  sliced.mesh
ogre_media/models/toilets/: cube.stl  floor2-map.stl  office.stl  pitsburg-2fl-walls.stl  pitsburg.stl  pittsburg-office.stl  test1.stl  toilet_room.stl  toilet_room_without_toilet.stl  women_bathroom_splited.stl
src/controllers/: ogre_controller.cc
src/model/: mesh_view_model.cc  point_cloud_view_model.cc
src/ogre_helpers/: map_point_cloud.cc  object_list.cc  ogre_visuals.cc
src/ui/: edit_pc_tab.cc  io_tab.cc  robot_map_editor_panel.cc
src/utils/: history.cc  ogre_visualisation.cc  pcl_to_eigen.cc  to_build.cc
tests/: CMakeLists.txt  main.cc  plan_view_model_TEST.cc
ui/: robot_map_editor_panel.ui
