<?xml version="1.0"?>
<package format="2">
  <name>robot_map_editor</name>
  <version>0.0.0</version>
  <description>The robot_map_editor package</description>
  <maintainer email="denys.kotelovych@gmail.com">chip</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_visual_tools</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>rviz_vive_plugin_msgs</depend>
  <depend>rviz_vr</depend>
  <depend>somatic_rviz_plugins</depend>
  <depend>somatic_utils</depend>
  <depend>robot_cleaner_action_msgs</depend>
  <depend>somatic_rviz_wrapper</depend>


  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
